--- a/Plugins/YvrXR/YvrXR.uplugin
+++ b/Plugins/YvrXR/YvrXR.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "3.0.1",
+	"VersionName": "3.0.0",
 	"FriendlyName": "YVR XR",
 	"Description": "YvrXR is an YVR OpenXR implementation",
 	"Category": "Virtual Reality",
@@ -10,10 +10,11 @@
 	"DocsURL": "https://developer.yvrdream.com/yvrdoc/unreal/manual/Introduction.html",
 	"MarketplaceURL": "",
 	"SupportURL": "http://developer.yvrdream.com",
-	"EnabledByDefault": true,
+	"EngineVersion": "5.4.0",
+	"EnabledByDefault": false,
 	"CanContainContent": true,
 	"IsBetaVersion": false,
-	"Installed": true,
+	"Installed": false,
 	"SupportedTargetPlatforms": [
 		"Win64",
 		"Android"
@@ -55,6 +56,10 @@
 	"Plugins": [
 		{
 			"Name": "ProceduralMeshComponent",
+			"Enabled": true
+		},
+		{
+			"Name": "XRBase",
 			"Enabled": true
 		}
 	]
