--- a/Plugins/YvrXR/YvrXR.uplugin
+++ b/Plugins/YvrXR/YvrXR.uplugin
@@ -10,10 +10,11 @@
 	"DocsURL": "https://developer.yvrdream.com/yvrdoc/unreal/manual/Introduction.html",
 	"MarketplaceURL": "",
 	"SupportURL": "http://developer.yvrdream.com",
-	"EnabledByDefault": true,
+	"EngineVersion": "5.3.0",
+	"EnabledByDefault": false,
 	"CanContainContent": true,
 	"IsBetaVersion": false,
-	"Installed": true,
+	"Installed": false,
 	"SupportedTargetPlatforms": [
 		"Win64",
 		"Android"
@@ -55,6 +56,10 @@
 	"Plugins": [
 		{
 			"Name": "ProceduralMeshComponent",
+			"Enabled": true
+		},
+		{
+			"Name": "XRBase",
 			"Enabled": true
 		}
 	]
